# strict-variant

./: .appveyor.yml  .gitignore  .travis.yml  README.md  appveyor.yml  clang-format.sh  find_and_replace.sh  index.html  strict-variant-doc_HTML.manifest  strict_variant.pptx
bench/: Jamroot.jam  README.md  boost_variant.cpp  eggs_variant.cpp  exp_variant.cpp  format_benchmark_results.lua  generate_asm.sh  juice_variant.cpp  mapbox_variant.cpp  safe_variant.cpp  std_variant.cpp  strict_variant.cpp  versatile_variant.cpp
bench/include/: bench.hpp  bench_api.hpp  bench_framework.hpp
bench/juice-variant/include/juice/: conjunction.hpp  mpl.hpp  tuple.hpp  variant.hpp
bench/libcxx-variant/include/: exception  tuple  type_traits  variant
bench/libcxx-variant/src/: variant.cpp
bench/libcxx_variant/include/: variant.hpp
bench/tomilov-variant/: .gitignore  CMakeLists.txt
bench/tomilov-variant/include/: versatile.hpp
bench/tomilov-variant/include/versatile/: aggregate_wrapper.hpp  compare.hpp  in_place.hpp  io.hpp  recursive_wrapper.hpp  type_traits.hpp  utility.hpp  variant.hpp  versatile.hpp  visit.hpp
bench/tomilov-variant/test/include/test/: boost_variant.hpp  common.hpp  deep_and_hard.hpp  eggs_variant.hpp  prologue.hpp  traits.hpp  variant.hpp  versatile.hpp  visit.hpp  wrappers.hpp
bench/tomilov-variant/test/src/: boost_variant.cpp  eggs_variant.cpp  multivisit.cpp  test_ct_boost_variant.cpp  test_ct_eggs_variant.cpp  test_ct_variant.cpp  test_ct_versatile.cpp  traits.cpp  variant.cpp  versatile.cpp
doc/: Jamroot.jam  fetch_boost_images_and_css.sh
doc/qbk/: AdvancedUsage.qbk  AliasAllocVariant.qbk  AliasEasyVariant.qbk  ArithmeticCategory.qbk  ArithmeticRank.qbk  BasicUsage.qbk  Benchmarks.qbk  ClassRecursiveWrapper.qbk  ClassVariant.qbk  ClassVariantComparator.qbk  Comparison.qbk  Compatibility.qbk  Configuration.qbk  Design.qbk  Dominates.qbk  FutureDirections.qbk  ImplementationNotes.qbk  Includes.qbk  Intro.qbk  IsWrapper.qbk  Motivation.qbk  PerformanceCharacteristics.qbk  Restrictions.qbk  SafeArithmeticConversion.qbk  SafePointerConversion.qbk  SafelyConstructible.qbk  Synopsis.qbk  Tutorial.qbk  strict_variant.qbk
example/: Jamroot.jam  boost_variant.cpp  example.hpp  exp_variant.cpp  run.sh  std_variant.cpp  strict_variant.cpp
include/safe_variant/: construct_from_property.hpp  conversion_rank.hpp  find_with.hpp  index.hpp  is_member_property.hpp  max.hpp  recursive_wrapper.hpp  remove_reference.hpp  safely_constructible.hpp  static_visitor.hpp  std_traits.hpp  typelist.hpp  variant.hpp  variant_compare.hpp  variant_detail.hpp  variant_dispatch.hpp  variant_fwd.hpp  variant_hash.hpp  variant_spirit.hpp  variant_storage.hpp  variant_stream_ops.hpp
include/safe_variant/mpl/: is_member_property.hpp  std_traits.hpp  typelist.hpp  ulist.hpp
include/strict_variant/: alloc_variant.hpp  alloc_wrapper.hpp  conversion_rank.hpp  filter_overloads.hpp  multivisit.hpp  recursive_wrapper.hpp  safe_arithmetic_conversion.hpp  safe_pointer_conversion.hpp  safely_constructible.hpp  variant.hpp  variant_compare.hpp  variant_detail.hpp  variant_dispatch.hpp  variant_fwd.hpp  variant_hash.hpp  variant_spirit.hpp  variant_storage.hpp  variant_stream_ops.hpp  version.hpp  wrapper.hpp
include/strict_variant/mpl/: construct_from_property.hpp  find_any_in_list.hpp  find_with.hpp  is_member_property.hpp  max.hpp  nonstd_traits.hpp  std_traits.hpp  tuple_cdr.hpp  typelist.hpp  ulist.hpp
strict_variant/: comparison.html  discussion.html  intro.html  introdution.html  overview.html  reference.html  remarks.html  tutorial.html
strict_variant/comparison/: benchmarks.html  comparison.html
strict_variant/discussion/: comparison_and_performance_chara.html  future_directions.html  implementation_notes.html  performance_characteristics.html  vistation_benchmarks.html
strict_variant/intro/: abstract_and_motivation.html  design.html  intro.html
strict_variant/introdution/: abstract_and_motivation.html  design.html
strict_variant/overview/: abstract_and_motivation.html  design.html
strict_variant/reference/: alias_template_easy_variant.html  arithmetic_category.html  arithmetic_rank.html  class_template_recursive_wrapper.html  class_template_variant.html  comparator.html  compiler_compatibility.html  configuration.html  dominates.html  includes.html  restrictions.html  safe_arithmetic_conversion.html  safe_pointer_conversion.html  safely_constructible.html  synopsis.html  type_trait_dominates.html
strict_variant/remarks/: benchmarks.html  comparison.html  comparison_and_performance_chara.html  compiler_compatibility.html  future_directions.html  implementation_notes.html
strict_variant/tutorial/: advanced_usage.html  basic.html  basic_usage.html  comparison.html  reference.html
strict_variant/tutorial/basic_usage/: advanced_usage.html
strict_variant/tutorial/comparison/: benchmarks.html  comparison.html
strict_variant/tutorial/reference/: configuration.html  includes.html  restrictions.html  synopsis.html
test/: Jamroot.jam  alloc.cpp  compare.cpp  hash.cpp  spirit.cpp  tutorial_advanced.cpp  tutorial_basic.cpp  variant.cpp
test/include/test_harness/: test.hpp  test_harness.hpp
